--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html>
-<style>
-body {
-	background: #31c4ba;
-}
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    background: white;
-	transform: rotate(0.31deg);
-	max-width: 600px;
-	margin: 5% auto 30px auto; 
-	padding: 5px;
-}
+	<style>
+		body {
+		background: #31c4ba;
+		}
+		.card {
+		box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+		transition: 0.3s;
+		border-radius: 5px;
+		background: white;
+		transform: rotate(0.31deg);
+		max-width: 600px;
+		margin: 5% auto 30px auto; 
+		padding: 5px;
+		}
 
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-a:hover {
-    color: red;
-    background-color: transparent;
-    text-decoration: underline;
-}
-</style>
-<head>
-</head>
-<body>
-<div class="card">
-<h1>Recept Suikerbrood</h1>
-<p>Bereidingstijd	2 uur</p>
-<h3>Ingrediënten</h3>
-<ul>
-  <li>500 g tarwebloem</li>
-  <li>250 ml handwarm water</li>
-  <li>9 g zout</li>
-  <li>11 g suiker</li>
-  <li>200 g suikergrein</li>
-  <li>25 g boter</li>
-  <li>1 g kaneel</li>
-  <li>10 g gist (instant)</li>
-</ul> 
-<h3>Recept</h3>
-<p>Kneed een mooi glad deeg van alle ingrediënten behalve de suikergrein en laat dit in een kom met folie afgedekt ruim 20 minuten rijzen. Druk het gerezen deeg plat en rol het tot een bal. Laat het weer rijzen. Voeg na 20 minuten de suikergrein toe en verspreid dit gelijkmatig over het deeg. Bebloem de ondergrond en druk hierop het deeg uit tot een plak, vouw deze weer op en druk opnieuw plat. Rol nu het deeg stevig op en druk de rol met de naad naar onder in een ingevette cakevorm. Laat het deeg nog 45 minuten rijzen onder folie.
-Verwarm de oven voor (220 °C / 6) en bak het brood in een half uur goudbruin.</p>
+		.card:hover {
+		box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+		}
+		a:hover {
+		color: red;
+		background-color: transparent;
+		text-decoration: underline;
+		}
+	</style>
+	<head>
+		<title>Welkom bij de lekkerste recepten voor suikerbrood</title>
+	</head>
+	<body>
+		<div class="card">
+			<h1>Recept Suikerbrood</h1>
+			<p>Bereidingstijd	2 uur</p>
+			<h3>Ingrediënten</h3>
+			<ul>
+				<li>500 g tarwebloem</li>
+				<li>250 ml handwarm water</li>
+				<li>9 g zout</li>
+				<li>11 g suiker</li>
+				<li>200 g suikergrein</li>
+				<li>25 g boter</li>
+				<li>1 g kaneel</li>
+				<li>10 g gist (instant)</li>
+			</ul> 
+			<h3>Recept</h3>
+			<p>Kneed een mooi glad deeg van alle ingrediënten behalve de suikergrein en laat dit in een kom met folie afgedekt ruim 20 minuten rijzen. Druk het gerezen deeg plat en rol het tot een bal. Laat het weer rijzen. Voeg na 20 minuten de suikergrein toe en verspreid dit gelijkmatig over het deeg. Bebloem de ondergrond en druk hierop het deeg uit tot een plak, vouw deze weer op en druk opnieuw plat. Rol nu het deeg stevig op en druk de rol met de naad naar onder in een ingevette cakevorm. Laat het deeg nog 45 minuten rijzen onder folie.
+				Verwarm de oven voor (220 °C / 6) en bak het brood in een half uur goudbruin.</p>
 
-<a href="https://nl.wikibooks.org/wiki/Kookboek/Suikerbrood">Bron</a>
-</div>
-</body>
+			<a href="https://nl.wikibooks.org/wiki/Kookboek/Suikerbrood">Bron</a>
+		</div>
+	</body>
 
 </html>
+<! Random string: @g25uXVc6Hg%0#G>
