Changed size of buttons

--- a/manhattan.html
+++ b/manhattan.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Click me!</title>
+  <style>
+    input{
+      min-height:calc((80vmin - 50px)/15);
+      min-width:calc((80vmin - 50px)/15);
+    }
+    #root{
+      margin: 15px auto 15px auto;
+    }
+  </style>
 </head>
 
 <body>
